fix(button): spacing is fixed

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@
 .button {
   background-color: purple;
   color: white;
+  margin-bottom: 20px;
 }
 
 .button:hover {
